# pyflow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyflow.yaml  pyproject.toml
.claude/skills/: create-agent-type.md  create-platform-tool.md  create-workflow.md  debug-workflow.md
agents/budget_analyst/: agent.py  predicates.py  workflow.yaml
agents/example/: agent-card.json  agent.py  workflow.yaml
agents/exchange_tracker/: agent-card.json  agent.py  workflow.yaml
docs/: adk-alignment.md  concepts.md  evaluation.md
docs/plans/: 2026-02-27-adk-first-implementation.md  2026-02-27-adk-first-platform-redesign.md  2026-02-27-adk-platform-migration.md  2026-02-27-budget-analyst-design.md  2026-02-27-exchange-rate-tracker-design.md  2026-02-27-pydantic-settings-refactor.md  2026-02-27-pyflow-design.md  2026-02-27-pyflow-implementation.md  2026-02-27-pyflow-v2-platform-design.md  2026-02-27-ynab-tool-design.md  2026-02-27-ynab-tool-implementation.md  2026-02-28-adk-alignment-cleanup-design.md  2026-02-28-adk-alignment-cleanup-implementation.md  2026-02-28-agent-packages-design.md  2026-02-28-agent-packages-implementation.md  2026-02-28-eliminate-card-duplication-design.md  (+6 more)
pyflow/: cli.py  config.py  server.py
pyflow/ai/: __init__.py  (+1 more)
specs/: ynab-v1-openapi.yaml
tests/: test_budget_analyst_predicates.py  test_cli.py  test_cli_serve.py  test_config.py  test_e2e_budget_analyst.py  test_e2e_budget_analyst_live.py  test_e2e_live.py  test_integration.py  test_registry.py  test_server.py
workflows/: example.yaml  exchange_rate_tracker.yaml  exchange_tracker.yaml
(+134 files in other folders)
