[project]
name = "pyflow"
version = "0.1.0"
description = "Config-driven workflow automation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonpath-ng>=1.6",
    "httpx>=0.27",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
pyflow = "pyflow.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
